# Gasskin.io

./: README.md  SKILL.md  build.py  data.xml  dev_server.py  index.html  pages.json
.github/workflows/: deploy.yml  main.yml  update_stock_data.yml
PixAI-Tauri-main/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts  vitest.config.ts
PixAI-Tauri-main/.codestable/: attention.md
PixAI-Tauri-main/design-previews/: settings-redesign-preview.html
PixAI-Tauri-main/docs/: release-github-actions.md
PixAI-Tauri-main/scripts/: local-updater.mjs  pixai-codex.mjs  release-updater.mjs  updater-artifacts.mjs
PixAI-Tauri-main/src/: App.tsx  generation-retry-display.test.ts  index.css  (+5 more)
PixAI-Tauri-main/src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
PixAI-Tauri-main/src-tauri/capabilities/: default.json
PixAI-Tauri-main/src-tauri/icons/: icon.icns
PixAI-Tauri-main/src-tauri/src/: lib.rs  main.rs
Readme/: 创建视频生成任务API.md  取消或删除视频生成任务.md  查询视频生成任务列表.md
answer/: app.js  index.html  owner.json  question.json  style.css
docs/: app.js  data.json  index.html  pages.json  style.css
image2/: OpenAI_gpt-image-2_API调用说明.md  README.md  api-whitelist.txt  app.js  config.js  index.html  openai-proxy-worker.js  style.css
seedance/: app.js  style.css
static/: index.html  style.css
stock/: app.js  back_etf.py  data.json  etf.txt  gen_data.py  index.html  key.txt  run.py  stock.txt  style.css  update_data.py  update_etf_data.py  update_watch.py  watch.bat  watch.json  watch.py  watch.txt  watch_etf.txt
(+275 files in other folders)
