[package]
name = "pixai-tauri"
version = "0.0.15"
description = "PixAI desktop image generation app rebuilt on Tauri 2"
authors = ["PixAI"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pixai_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
keyring = "4.0.1"
keyring-core = "1.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls-alpn", "http2", "system-proxy"] }
base64 = "0.22"
tokio = { version = "1", features = ["time"] }
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-single-instance = "2.4.2"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
tauri-winrt-notification = "0.7.2"
